--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ GOOGLE_REDIRECT_URI=http://localhost:8081
 # TOKEN_STORE_PATH: defaults to /tokens in Docker, ~/.config/google-calendar-mcp/ locally.
 # Uncomment and set only if you need a custom path.
 # TOKEN_STORE_PATH=~/.config/google-calendar-mcp/
+# Full read-write access (default). Use calendar.readonly if you only need read tools:
+#   https://www.googleapis.com/auth/calendar.readonly
 GOOGLE_SCOPES=https://www.googleapis.com/auth/calendar
 DEFAULT_CALENDAR_ID=primary
 LOG_LEVEL=WARNING
