fix: update .dockerignore to include additional directories for Claude, benchmarks, and uv-cache

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,14 @@
 .venv/
 .git/
+.claude/
 tests/
 *.pyc
 __pycache__/
 .env
 *.token.json
 .pytest_cache/
+.benchmarks/
+.uv-cache/
 dist/
 build/
 *.egg-info/
