--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -1,14 +1,15 @@
-name: Python Checks
-
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["Auto Tag"]
+    types: [completed]
+    branches: [main]
   pull_request:
     branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'pull_request' }}
     strategy:
       matrix:
         python-version: ["3.12", "3.13"]
@@ -26,6 +27,9 @@ jobs:
 
       - name: Install dependencies
         run: uv pip install --system -e ".[dev]"
+
+      - name: Install ruff
+        run: uv pip install --system ruff
 
       - name: Lint with ruff
         run: |
