--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -1,3 +1,5 @@
+name: Python Checks
+
 on:
   workflow_run:
     workflows: ["Auto Tag"]
@@ -36,4 +38,4 @@ jobs:
           ruff check --output-format=github --select=E9,F63,F7,F82 .
 
       - name: Test with pytest
-        run: pytest
+        run: uv run pytest
